src/passes/snapshots/lumina2__passes__cst_gen__test__expression__literal_integer_123.snap
---
source: src/passes/cst_gen.rs
expression: "123"
---
Integer(
    IntegerLiteral(
        IntegerLiteral(
            123,
        ),
    ),
)
