src/passes/snapshots/lumina2__passes__cst_gen__test__expression__named.snap
---
source: src/passes/cst_gen.rs
expression: ".field"
---
Field {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_dot: Dot,
    field: Named(
        Ident(
            "field",
        ),
    ),
}
