src/passes/snapshots/lumina2__passes__cst_gen__test__expression__parenthesis_double.snap
---
source: src/passes/cst_gen.rs
expression: ((some_ident))
---
Parenthesis {
    tok_l_parenthesis: LParenthesis,
    expression: Parenthesis(
        Parenthesis {
            tok_l_parenthesis: LParenthesis,
            expression: Variable(
                Variable {
                    variable: Ident(
                        "some_ident",
                    ),
                },
            ),
            tok_r_parenthesis: RParenthesis,
        },
    ),
    tok_r_parenthesis: RParenthesis,
}
