src/passes/snapshots/lumina2__passes__cst_gen__test__expression__parenthesis_literal.snap
---
source: src/passes/cst_gen.rs
expression: (123)
---
Parenthesis {
    tok_l_parenthesis: LParenthesis,
    expression: Literal(
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    123,
                ),
            ),
        ),
    ),
    tok_r_parenthesis: RParenthesis,
}
