src/passes/snapshots/lumina2__passes__cst_gen__test__expression__tuple_empty.snap
---
source: src/passes/cst_gen.rs
expression: ()
---
Tuple {
    tok_l_parenthesis: LParenthesis,
    values: PunctuatedList {
        items: [],
        punctuation: [],
    },
    tok_r_parenthesis: RParenthesis,
}
