src/passes/snapshots/lumina2__passes__cst_gen__test__expression__unary_literal.snap
---
source: src/passes/cst_gen.rs
expression: "!2"
---
Unary {
    operation: Not(
        Bang,
    ),
    value: Literal(
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    2,
                ),
            ),
        ),
    ),
}
